add Dockerfile, cleanups to view.py

--- a/src/panhandler/snippets/imort_repo/metadata.yaml
+++ b/src/panhandler/snippets/imort_repo/metadata.yaml
@@ -1,6 +1,6 @@
 name: import_repo
 label: Import Git Repository
-description: Imports a git repository
+description: Imports a Git repository
 type: template
 extends:
 
