skip .git dirs when locating .meta-cnc files

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,45 @@
-certifi==2018.10.15
+amqp==2.4.0
+asgiref==2.3.2
+asn1crypto==0.24.0
+async-timeout==3.0.1
+attrs==18.2.0
+autobahn==19.1.1
+Automat==0.7.0
+billiard==3.5.0.5
+celery==4.2.1
+certifi==2018.11.29
+cffi==1.11.5
+channels==2.1.6
 chardet==3.0.4
-Django==2.1.3
+constantly==15.1.0
+cryptography==2.4.2
+daphne==2.2.4
+Django==2.1.5
 django-widget-tweaks==1.4.3
-docker==3.5.1
-docker-pycreds==0.3.0
+docker==3.6.0
+docker-pycreds==0.4.0
 gitdb2==2.0.5
 GitPython==2.1.11
-idna==2.7
+hyperlink==18.0.0
+idna==2.8
+incremental==17.5.0
 Jinja2==2.10
+kombu==4.2.2.post1
 MarkupSafe==1.1.0
 oyaml==0.7
-pan-python==0.13.0
+pan-python==0.14.0
+passlib==1.7.1
+pyAesCrypt==0.4.2
+pycparser==2.19
+PyHamcrest==1.9.0
 pytz==2018.7
 PyYAML==3.13
-requests==2.20.0
-six==1.11.0
+requests==2.21.0
+six==1.12.0
 smmap2==2.0.5
+Twisted==18.9.0
+txaio==18.8.1
 urllib3==1.24.1
+vine==1.2.0
 websocket-client==0.54.0
+zope.interface==4.6.0
