implement remove repo

--- a/src/panhandler/.pan-cnc.yaml
+++ b/src/panhandler/.pan-cnc.yaml
@@ -59,6 +59,10 @@ views:
     class: UpdateRepoView
     parameter: repo_name
 
+  - name: remove_repo
+    class: RemoveRepoView
+    parameter: repo_name
+
   - name: provision
     class: ProvisionSnippetView
 
