--- a/src/panhandler/.pan-cnc.yaml
+++ b/src/panhandler/.pan-cnc.yaml
@@ -1,4 +1,5 @@
 name: panhandler
+label: Panhandler
 
 repositories:
   - name: Iron-Skillet-v81
@@ -17,10 +18,10 @@ views:
     menu: Panhandler
     menu_option: Welcome
     attributes:
-      template_name: pan_cnc/welcome.html
+      template_name: panhandler/welcome.html
     context:
       title: Panhandler
-      description: Panhandler is a tool to allow sharing of git repositories, which can contain virtually anything.
+      description: description is inline
       documentation_link: https://github.com/PaloAltoNetworks/panhandler/blob/master/docs/snippet_configuration.rst
       next: repos
 
