use http link for submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "cnc"]
 	path = cnc
-	url = git@github.com:PaloAltoNetworks/pan-cnc.git
+	url = https://github.com/PaloAltoNetworks/pan-cnc.git
 	branch = master
