--- a/src/panhandler/.pan-cnc.yaml
+++ b/src/panhandler/.pan-cnc.yaml
@@ -6,18 +6,18 @@ repositories:
     url: https://github.com/PaloAltoNetworks/iron-skillet.git
     branch: panos_v8.1
     destination_directory: Iron-Skillet v81
-  - name: Iron-Skillet-v80
-    url: https://github.com/PaloAltoNetworks/iron-skillet.git
-    branch: panos_v8.0
-    destination_directory: Iron-Skillet v80
-  - name: Mobile Skillets
-    url: https://github.com/PaloAltoNetworks/MobileSkillet.git
-    branch: panos_v8.1
-    destination_directory: Mobile Skillet v81
-  - name: MSSP Templates v8.1
-    url:  https://github.com/scotchoaf/mssp-templates.git
-    branch: panos_v8.1
-    destination_directory: MSSP Skillets v81
+#  - name: Iron-Skillet-v80
+#    url: https://github.com/PaloAltoNetworks/iron-skillet.git
+#    branch: panos_v8.0
+#    destination_directory: Iron-Skillet v80
+#  - name: Mobile Skillets
+#    url: https://github.com/PaloAltoNetworks/MobileSkillet.git
+#    branch: panos_v8.1
+#    destination_directory: Mobile Skillet v81
+#  - name: MSSP Templates v8.1
+#    url:  https://github.com/scotchoaf/mssp-templates.git
+#    branch: panos_v8.1
+#    destination_directory: MSSP Skillets v81
   - name: Default Skillets
     url: https://github.com/PaloAltoNetworks/Skillets.git
     branch: master
