--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,9 +14,9 @@ jobs:
               echo 'export TAG=1.0.${CIRCLE_BUILD_NUM}' >> $BASH_ENV
             elif [ "${CIRCLE_BRANCH}" == "develop" ]; then
               echo 'export TAG=dev' >> $BASH_ENV
-            else:
+            else
               echo "Not building other branch"
             fi
             docker build -t paloaltonetworks/panhandler:$TAG .
-            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
+            echo ${DOCKER_PWD} | docker login -u ${DOCKER_LOGIN} --password-stdin
             docker push paloaltonetworks/panhandler:$TAG
