push latest tag as well as version docker tag

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,3 +23,6 @@ jobs:
             docker build -t paloaltonetworks/panhandler:$TAG .
             echo ${DOCKER_PWD} | docker login -u ${DOCKER_LOGIN} --password-stdin
             docker push paloaltonetworks/panhandler:$TAG
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              docker push paloaltonetworks/panhandler:latest
+            fi
