--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,5 +24,6 @@ jobs:
             echo ${DOCKER_PWD} | docker login -u ${DOCKER_LOGIN} --password-stdin
             docker push paloaltonetworks/panhandler:$TAG
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              docker tag paloaltonetworks/panhandler:$TAG paloaltonetworks/panhandler:latest
               docker push paloaltonetworks/panhandler:latest
             fi
