--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,11 @@ wheels/
 *.egg
 MANIFEST
 
+# do not ignore panhandler libs
+
+!src/panhandler/lib/*
+!src/panhandler/lib
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
