--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ amqp==2.4.1
 asgiref==2.3.2
 asn1crypto==0.24.0
 async-timeout==3.0.1
+atomicwrites==1.3.0
 attrs==18.2.0
 autobahn==19.2.1
 Automat==0.7.0
@@ -27,15 +28,20 @@ Jinja2==2.10
 jsonpath-ng==1.4.3
 kombu==4.3.0
 MarkupSafe==1.1.1
+more-itertools==6.0.0
 oyaml==0.7
 pan-python==0.14.0
 passlib==1.7.1
 pipenv==2018.11.26
+pluggy==0.9.0
 ply==3.11
+py==1.8.0
 pyAesCrypt==0.4.2
 pycparser==2.19
 Pygments==2.3.1
 PyHamcrest==1.9.0
+pytest==4.3.1
+pytest-django==3.4.8
 pytz==2018.9
 PyYAML==3.13
 requests==2.21.0
