--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,8 @@ jobs:
       - run:
           name: Build and push Docker image
           command: |
+            export DATE=$(date  '+%Y%M%d-%H%m%S')
+            echo $DATE > src/panhandler/templates/panhandler/version.html
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
               export TAG=1.0.${CIRCLE_BUILD_NUM}
             elif [ "${CIRCLE_BRANCH}" == "develop" ]; then
