--- a/requirements.txt
+++ b/requirements.txt
@@ -11,32 +11,32 @@ attrs==19.1.0
 autobahn==19.3.3
 Automat==0.7.0
 azure-batch==6.0.0
-azure-cli==2.0.63
-azure-cli-acr==2.2.5
-azure-cli-acs==2.3.22
+azure-cli==2.0.64
+azure-cli-acr==2.2.6
+azure-cli-acs==2.4.1
 azure-cli-advisor==2.0.0
 azure-cli-ams==0.4.5
-azure-cli-appservice==0.2.18
+azure-cli-appservice==0.2.19
 azure-cli-backup==1.2.4
-azure-cli-batch==4.0.0
+azure-cli-batch==4.0.1
 azure-cli-batchai==0.4.8
 azure-cli-billing==0.2.1
-azure-cli-botservice==0.1.10
+azure-cli-botservice==0.2.0
 azure-cli-cdn==0.2.3
 azure-cli-cloud==2.1.1
 azure-cli-cognitiveservices==0.2.5
 azure-cli-command-modules-nspkg==2.0.2
-azure-cli-configure==2.0.22
+azure-cli-configure==2.0.23
 azure-cli-consumption==0.4.2
 azure-cli-container==0.3.16
-azure-cli-core==2.0.63
+azure-cli-core==2.0.64
 azure-cli-cosmosdb==0.2.10
 azure-cli-deploymentmanager==0.1.0
 azure-cli-dla==0.2.5
 azure-cli-dls==0.1.9
 azure-cli-dms==0.1.3
 azure-cli-eventgrid==0.2.3
-azure-cli-eventhubs==0.3.4
+azure-cli-eventhubs==0.3.5
 azure-cli-extension==0.2.5
 azure-cli-feedback==2.2.1
 azure-cli-find==0.3.2
@@ -44,14 +44,14 @@ azure-cli-hdinsight==0.3.3
 azure-cli-interactive==0.4.3
 azure-cli-iot==0.3.8
 azure-cli-iotcentral==0.1.6
-azure-cli-keyvault==2.2.14
+azure-cli-keyvault==2.2.15
 azure-cli-kusto==0.2.2
 azure-cli-lab==0.1.7
 azure-cli-maps==0.3.4
 azure-cli-monitor==0.2.13
-azure-cli-network==2.3.7
+azure-cli-network==2.4.0
 azure-cli-nspkg==3.0.3
-azure-cli-policyinsights==0.1.2
+azure-cli-policyinsights==0.1.3
 azure-cli-privatedns==1.0.0
 azure-cli-profile==2.1.5
 azure-cli-rdbms==0.3.10
@@ -59,25 +59,25 @@ azure-cli-redis==0.4.2
 azure-cli-relay==0.1.4
 azure-cli-reservations==0.4.2
 azure-cli-resource==2.1.14
-azure-cli-role==2.6.0
+azure-cli-role==2.6.1
 azure-cli-search==0.1.1
 azure-cli-security==0.1.1
-azure-cli-servicebus==0.3.4
-azure-cli-servicefabric==0.1.17
+azure-cli-servicebus==0.3.5
+azure-cli-servicefabric==0.1.18
 azure-cli-signalr==1.0.0
-azure-cli-sql==2.2.2
+azure-cli-sql==2.2.3
 azure-cli-sqlvm==0.1.1
 azure-cli-storage==2.4.1
 azure-cli-telemetry==1.0.2
-azure-cli-vm==2.2.19
+azure-cli-vm==2.2.20
 azure-common==1.1.19
-azure-datalake-store==0.0.44
+azure-datalake-store==0.0.39
 azure-functions-devops-build==0.0.21
-azure-graphrbac==0.61.0
+azure-graphrbac==0.60.0
 azure-keyvault==1.1.0
 azure-mgmt-advisor==2.0.1
 azure-mgmt-applicationinsights==0.1.1
-azure-mgmt-authorization==0.51.1
+azure-mgmt-authorization==0.50.0
 azure-mgmt-batch==6.0.0
 azure-mgmt-batchai==2.0.0
 azure-mgmt-billing==0.2.0
@@ -86,45 +86,45 @@ azure-mgmt-cdn==3.1.0
 azure-mgmt-cognitiveservices==3.0.0
 azure-mgmt-compute==5.0.0
 azure-mgmt-consumption==2.0.0
-azure-mgmt-containerinstance==1.4.1
+azure-mgmt-containerinstance==1.4.0
 azure-mgmt-containerregistry==2.7.0
-azure-mgmt-containerservice==5.1.0
+azure-mgmt-containerservice==5.2.0
 azure-mgmt-cosmosdb==0.5.2
-azure-mgmt-datalake-analytics==0.6.0
+azure-mgmt-datalake-analytics==0.2.1
 azure-mgmt-datalake-nspkg==3.0.1
 azure-mgmt-datalake-store==0.5.0
-azure-mgmt-datamigration==2.1.0
+azure-mgmt-datamigration==0.1.0
 azure-mgmt-deploymentmanager==0.1.0
-azure-mgmt-devtestlabs==3.0.0
+azure-mgmt-devtestlabs==2.2.0
 azure-mgmt-dns==2.1.0
 azure-mgmt-eventgrid==2.0.0
 azure-mgmt-eventhub==2.6.0
-azure-mgmt-hdinsight==1.0.0
+azure-mgmt-hdinsight==0.2.1
 azure-mgmt-iotcentral==1.0.0
 azure-mgmt-iothub==0.7.0
 azure-mgmt-iothubprovisioningservices==0.2.0
 azure-mgmt-keyvault==1.1.0
 azure-mgmt-kusto==0.3.0
 azure-mgmt-loganalytics==0.2.0
-azure-mgmt-managementgroups==0.2.0
+azure-mgmt-managementgroups==0.1.0
 azure-mgmt-maps==0.1.0
-azure-mgmt-marketplaceordering==0.2.1
+azure-mgmt-marketplaceordering==0.1.0
 azure-mgmt-media==1.1.1
-azure-mgmt-monitor==0.6.0
+azure-mgmt-monitor==0.5.2
 azure-mgmt-msi==0.2.0
-azure-mgmt-network==2.7.0
+azure-mgmt-network==2.6.0
 azure-mgmt-nspkg==3.0.2
 azure-mgmt-policyinsights==0.3.1
 azure-mgmt-privatedns==0.1.0
-azure-mgmt-rdbms==1.8.0
-azure-mgmt-recoveryservices==0.4.0
-azure-mgmt-recoveryservicesbackup==0.3.0
+azure-mgmt-rdbms==1.7.1
+azure-mgmt-recoveryservices==0.1.1
+azure-mgmt-recoveryservicesbackup==0.1.2
 azure-mgmt-redis==6.0.0
 azure-mgmt-relay==0.1.0
-azure-mgmt-reservations==0.3.2
+azure-mgmt-reservations==0.3.1
 azure-mgmt-resource==2.1.0
 azure-mgmt-search==2.0.0
-azure-mgmt-security==0.2.0
+azure-mgmt-security==0.1.0
 azure-mgmt-servicebus==0.6.0
 azure-mgmt-servicefabric==0.2.0
 azure-mgmt-signalr==0.1.1
@@ -135,7 +135,7 @@ azure-mgmt-trafficmanager==0.51.0
 azure-mgmt-web==0.41.0
 azure-multiapi-storage==0.2.3
 azure-nspkg==3.0.2
-azure-storage-blob==1.5.0
+azure-storage-blob==1.3.1
 azure-storage-common==1.4.0
 azure-storage-nspkg==3.1.0
 bcrypt==3.1.6
@@ -181,10 +181,11 @@ paramiko==2.4.2
 passlib==1.7.1
 pbr==5.2.0
 pexpect==4.6.0
+pipenv==2018.11.26
 pluggy==0.9.0
 ply==3.11
-portalocker==1.4.0
-prompt-toolkit==2.0.9
+portalocker==1.2.1
+prompt-toolkit==1.0.16
 psutil==5.6.2
 ptyprocess==0.6.0
 py==1.8.0
@@ -203,7 +204,7 @@ pytest-django==3.4.8
 python-dateutil==2.8.0
 pytz==2019.1
 PyYAML==5.1
-requests==2.21.0
+requests==2.22.0
 requests-oauthlib==1.2.0
 scp==0.13.2
 six==1.12.0
