implement update all repos function

--- a/src/panhandler/.pan-cnc.yaml
+++ b/src/panhandler/.pan-cnc.yaml
@@ -72,6 +72,9 @@ views:
     class: UpdateRepoView
     parameter: repo_name
 
+  - name: update_all_repos
+    class: UpdateAllReposView
+
   - name: remove_repo
     class: RemoveRepoView
     parameter: repo_name
