--- a/src/panhandler/.pan-cnc.yaml
+++ b/src/panhandler/.pan-cnc.yaml
@@ -38,7 +38,9 @@ views:
       next_url: view_snippets
       help_text: >
         This view imports a new git repository. Once imported, any skillets defined in that repository will be
-        available in the Skillet Collections.
+        available in the Skillet Collections. Click below for more detailed documentation.
+      help_link_title: Import Skillets Documentation
+      help_link: https://panhandler.readthedocs.io/en/master/importing_skillets.html
 
 #  - name: snippet_types
 #    class: ListSnippetTypesView
