--- a/src/panhandler/snippets/app/imort_repo/.meta-cnc.yaml
+++ b/src/panhandler/snippets/app/imort_repo/.meta-cnc.yaml
@@ -10,16 +10,18 @@ labels:
 variables:
 - name: repo_name
   description: Repository Name
-  default: Default Skillet
+  default: Example_Skillets
   type_hint: text
+  allow_special_characters: false
 - name: url
   description: Git Repository HTTPS URL
   default: https://github.com/PaloAltoNetworks/Skillets.git
-  type_hint: text
+  type_hint: url
 - name: branch
   description: Branch
   default: master
   type_hint: text
+  allow_special_characters: false
 
 snippets:
 
