--- a/requirements.txt
+++ b/requirements.txt
@@ -10,134 +10,159 @@ atomicwrites==1.3.0
 attrs==19.1.0
 autobahn==19.3.3
 Automat==0.7.0
-azure-batch==6.0.0
-azure-cli==2.0.64
-azure-cli-acr==2.2.6
-azure-cli-acs==2.4.1
+azure==4.0.0
+azure-applicationinsights==0.1.0
+azure-batch==6.0.1
+azure-cli==2.0.65
+azure-cli-acr==2.2.7
+azure-cli-acs==2.4.2
 azure-cli-advisor==2.0.0
-azure-cli-ams==0.4.5
-azure-cli-appservice==0.2.19
+azure-cli-ams==0.4.6
+azure-cli-appservice==0.2.20
 azure-cli-backup==1.2.4
 azure-cli-batch==4.0.1
-azure-cli-batchai==0.4.8
+azure-cli-batchai==0.4.9
 azure-cli-billing==0.2.1
-azure-cli-botservice==0.2.0
+azure-cli-botservice==0.2.1
 azure-cli-cdn==0.2.3
 azure-cli-cloud==2.1.1
 azure-cli-cognitiveservices==0.2.5
 azure-cli-command-modules-nspkg==2.0.2
 azure-cli-configure==2.0.23
-azure-cli-consumption==0.4.2
-azure-cli-container==0.3.16
-azure-cli-core==2.0.64
+azure-cli-consumption==0.4.3
+azure-cli-container==0.3.17
+azure-cli-core==2.0.65
 azure-cli-cosmosdb==0.2.10
 azure-cli-deploymentmanager==0.1.0
 azure-cli-dla==0.2.5
 azure-cli-dls==0.1.9
 azure-cli-dms==0.1.3
 azure-cli-eventgrid==0.2.3
-azure-cli-eventhubs==0.3.5
+azure-cli-eventhubs==0.3.6
 azure-cli-extension==0.2.5
 azure-cli-feedback==2.2.1
-azure-cli-find==0.3.2
-azure-cli-hdinsight==0.3.3
-azure-cli-interactive==0.4.3
-azure-cli-iot==0.3.8
+azure-cli-find==0.3.3
+azure-cli-hdinsight==0.3.4
+azure-cli-interactive==0.4.4
+azure-cli-iot==0.3.9
 azure-cli-iotcentral==0.1.6
 azure-cli-keyvault==2.2.15
 azure-cli-kusto==0.2.2
 azure-cli-lab==0.1.7
 azure-cli-maps==0.3.4
-azure-cli-monitor==0.2.13
-azure-cli-network==2.4.0
+azure-cli-monitor==0.2.14
+azure-cli-natgateway==0.1.0
+azure-cli-network==2.5.0
 azure-cli-nspkg==3.0.3
 azure-cli-policyinsights==0.1.3
-azure-cli-privatedns==1.0.0
+azure-cli-privatedns==1.0.1
 azure-cli-profile==2.1.5
-azure-cli-rdbms==0.3.10
-azure-cli-redis==0.4.2
+azure-cli-rdbms==0.3.11
+azure-cli-redis==0.4.3
 azure-cli-relay==0.1.4
 azure-cli-reservations==0.4.2
 azure-cli-resource==2.1.14
-azure-cli-role==2.6.1
+azure-cli-role==2.6.2
 azure-cli-search==0.1.1
 azure-cli-security==0.1.1
 azure-cli-servicebus==0.3.5
-azure-cli-servicefabric==0.1.18
+azure-cli-servicefabric==0.1.19
 azure-cli-signalr==1.0.0
-azure-cli-sql==2.2.3
+azure-cli-sql==2.2.4
 azure-cli-sqlvm==0.1.1
-azure-cli-storage==2.4.1
+azure-cli-storage==2.4.2
 azure-cli-telemetry==1.0.2
-azure-cli-vm==2.2.20
-azure-common==1.1.19
-azure-datalake-store==0.0.39
-azure-functions-devops-build==0.0.21
-azure-graphrbac==0.60.0
+azure-cli-vm==2.2.21
+azure-common==1.1.21
+azure-cosmosdb-nspkg==2.0.2
+azure-cosmosdb-table==1.0.5
+azure-datalake-store==0.0.45
+azure-eventgrid==1.3.0
+azure-functions-devops-build==0.0.22
+azure-graphrbac==0.61.0
 azure-keyvault==1.1.0
+azure-loganalytics==0.1.0
+azure-mgmt==4.0.0
 azure-mgmt-advisor==2.0.1
-azure-mgmt-applicationinsights==0.1.1
-azure-mgmt-authorization==0.50.0
+azure-mgmt-applicationinsights==0.2.0
+azure-mgmt-authorization==0.52.0
 azure-mgmt-batch==6.0.0
 azure-mgmt-batchai==2.0.0
 azure-mgmt-billing==0.2.0
-azure-mgmt-botservice==0.1.0
+azure-mgmt-botservice==0.2.0
 azure-mgmt-cdn==3.1.0
-azure-mgmt-cognitiveservices==3.0.0
+azure-mgmt-cognitiveservices==4.0.0
+azure-mgmt-commerce==1.0.1
 azure-mgmt-compute==5.0.0
-azure-mgmt-consumption==2.0.0
-azure-mgmt-containerinstance==1.4.0
-azure-mgmt-containerregistry==2.7.0
-azure-mgmt-containerservice==5.2.0
-azure-mgmt-cosmosdb==0.5.2
-azure-mgmt-datalake-analytics==0.2.1
+azure-mgmt-consumption==3.0.0
+azure-mgmt-containerinstance==1.5.0
+azure-mgmt-containerregistry==2.8.0
+azure-mgmt-containerservice==5.3.0
+azure-mgmt-cosmosdb==0.6.0
+azure-mgmt-datafactory==0.7.0
+azure-mgmt-datalake-analytics==0.6.0
 azure-mgmt-datalake-nspkg==3.0.1
 azure-mgmt-datalake-store==0.5.0
-azure-mgmt-datamigration==0.1.0
+azure-mgmt-datamigration==2.2.0
 azure-mgmt-deploymentmanager==0.1.0
-azure-mgmt-devtestlabs==2.2.0
+azure-mgmt-devspaces==0.2.0
+azure-mgmt-devtestlabs==3.0.0
 azure-mgmt-dns==2.1.0
-azure-mgmt-eventgrid==2.0.0
+azure-mgmt-eventgrid==2.2.0
 azure-mgmt-eventhub==2.6.0
-azure-mgmt-hdinsight==0.2.1
+azure-mgmt-hanaonazure==0.6.0
+azure-mgmt-hdinsight==1.0.0
 azure-mgmt-iotcentral==1.0.0
-azure-mgmt-iothub==0.7.0
+azure-mgmt-iothub==0.8.2
 azure-mgmt-iothubprovisioningservices==0.2.0
 azure-mgmt-keyvault==1.1.0
 azure-mgmt-kusto==0.3.0
 azure-mgmt-loganalytics==0.2.0
-azure-mgmt-managementgroups==0.1.0
+azure-mgmt-logic==3.0.0
+azure-mgmt-machinelearningcompute==0.4.1
+azure-mgmt-managementgroups==0.2.0
+azure-mgmt-managementpartner==0.1.1
 azure-mgmt-maps==0.1.0
-azure-mgmt-marketplaceordering==0.1.0
+azure-mgmt-marketplaceordering==0.2.1
 azure-mgmt-media==1.1.1
-azure-mgmt-monitor==0.5.2
-azure-mgmt-msi==0.2.0
-azure-mgmt-network==2.6.0
+azure-mgmt-monitor==0.6.0
+azure-mgmt-msi==1.0.0
+azure-mgmt-network==2.7.0
+azure-mgmt-notificationhubs==2.1.0
 azure-mgmt-nspkg==3.0.2
 azure-mgmt-policyinsights==0.3.1
+azure-mgmt-powerbiembedded==2.0.0
 azure-mgmt-privatedns==0.1.0
-azure-mgmt-rdbms==1.7.1
-azure-mgmt-recoveryservices==0.1.1
-azure-mgmt-recoveryservicesbackup==0.1.2
+azure-mgmt-rdbms==1.8.0
+azure-mgmt-recoveryservices==0.4.0
+azure-mgmt-recoveryservicesbackup==0.4.0
 azure-mgmt-redis==6.0.0
-azure-mgmt-relay==0.1.0
-azure-mgmt-reservations==0.3.1
-azure-mgmt-resource==2.1.0
+azure-mgmt-relay==0.2.0
+azure-mgmt-reservations==0.3.2
+azure-mgmt-resource==2.2.0
+azure-mgmt-scheduler==2.0.0
 azure-mgmt-search==2.0.0
-azure-mgmt-security==0.1.0
+azure-mgmt-security==0.2.0
 azure-mgmt-servicebus==0.6.0
 azure-mgmt-servicefabric==0.2.0
-azure-mgmt-signalr==0.1.1
+azure-mgmt-signalr==0.2.0
 azure-mgmt-sql==0.12.0
 azure-mgmt-sqlvirtualmachine==0.2.0
-azure-mgmt-storage==3.1.1
+azure-mgmt-storage==3.3.0
+azure-mgmt-subscription==0.4.0
 azure-mgmt-trafficmanager==0.51.0
 azure-mgmt-web==0.41.0
 azure-multiapi-storage==0.2.3
 azure-nspkg==3.0.2
-azure-storage-blob==1.3.1
-azure-storage-common==1.4.0
+azure-servicebus==0.50.0
+azure-servicefabric==6.4.0.0
+azure-servicemanagement-legacy==0.20.6
+azure-storage==0.36.0
+azure-storage-blob==2.0.1
+azure-storage-common==2.0.0
+azure-storage-file==2.0.1
 azure-storage-nspkg==3.1.0
+azure-storage-queue==2.0.1
 bcrypt==3.1.6
 billiard==3.6.0.0
 celery==4.3.0
@@ -146,7 +171,7 @@ cffi==1.12.3
 chardet==3.0.4
 colorama==0.4.1
 constantly==15.1.0
-cryptography==2.6.1
+cryptography==2.4.2
 decorator==4.4.0
 Django==2.2
 django-widget-tweaks==1.4.3
@@ -214,6 +239,7 @@ sshtunnel==0.1.4
 tabulate==0.8.3
 Twisted==19.2.0
 txaio==18.8.1
+uamqp==1.1.0
 urllib3==1.24.2
 vine==1.3.0
 virtualenv==16.5.0
