update and sort requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
-oyaml
+GitPython
 PyYAML
-urllib3
-pan-python
-requests
-pyAesCrypt
-passlib
-jinja2
+azure-cli
 celery
 django
-GitPython
+django-widget-tweaks
+jinja2
 jsonpath-ng
 netaddr
-django-widget-tweaks
-azure-cli
+oyaml
+pan-python
+passlib
+pyAesCrypt
+requests
+requests-toolbelt
+urllib3
 virtualenv
+xmldiff
+xmltodict
