--- a/requirements.txt
+++ b/requirements.txt
@@ -17,4 +17,4 @@ urllib3
 virtualenv
 xmldiff
 xmltodict
-git+git://github.com/nembery/skilletlib.git@develop#egg=skilletlib
+git+git://github.com/paloaltonetworks/skilletlib.git@develop#egg=skilletlib
