--- a/src/panhandler/.pan-cnc.yaml
+++ b/src/panhandler/.pan-cnc.yaml
@@ -72,7 +72,9 @@ views:
 
   - name: update_repo
     class: UpdateRepoView
-    parameter: repo_name
+    parameters:
+      - repo_name
+      - branch
 
   - name: update_all_repos
     class: UpdateAllReposView
