--- a/requirements.txt
+++ b/requirements.txt
@@ -18,4 +18,6 @@ urllib3==1.25.9
 virtualenv==20.0.18
 xmldiff==2.4
 xmltodict==0.12.0
-skilletlib==0.1.5.5
+# skilletlib==0.1.5.6
+git+https://github.com/PaloAltoNetworks/skilletlib.git@develop#egg=skilletlib
+
