--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,6 @@ xmltodict==0.12.0
 # skilletlib==0.1.5.6
 git+https://github.com/PaloAltoNetworks/skilletlib.git@develop#egg=skilletlib
 
+
+pathlib~=1.0.1
+paramiko~=2.7.1
