--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,23 @@
-GitPython==3.1.1
+GitPython==3.1.2
 PyYAML==5.3.1
-azure-cli==2.4.0
 celery==4.4.2
-django==3.0.5
+django==3.0.6
 django-widget-tweaks==1.4.8
 docker==4.2.0
-cryptography==2.9.1
+cryptography==2.9.2
 jinja2==3.0.0a1
 jsonpath-ng==1.5.1
 netaddr==0.7.19
 oyaml==0.9
 pan-python==0.16.0
+paramiko~=2.7.1
 passlib==1.7.2
+pathlib~=1.0.1
 pyAesCrypt==0.4.3
 requests==2.23.0
 requests-toolbelt==0.9.1
 urllib3==1.25.9
-virtualenv==20.0.18
+virtualenv==20.0.21
 xmldiff==2.4
 xmltodict==0.12.0
-skilletlib==0.1.5.3
+skilletlib==0.1.6.7
