fix pytest issues

--- a/tox.ini
+++ b/tox.ini
@@ -2,13 +2,20 @@
 envlist = py37,flake8
 skipsdist = True
 
-;[testenv]
-;deps =
-;    pytest
-;    urllib3
-;    pytest-django
-;    django
-;commands = pytest tests/
+[pytest]
+norecursedirs=.tox build venv* .eggs
+DJANGO_SETTINGS_MODULE = pan_cnc.settings
+python_files = test_*.py
+python_paths = cnc
+
+[testenv]
+deps =
+    pytest
+    urllib3
+    pytest-django
+    pytest-pythonpath
+    django
+commands = pytest
 
 [testenv:flake8]
 deps = flake8
