fixes for GL #17 - flake8 and tox test nags

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py37,flake8
+envlist = py37,flake8-ph,flake8-cnc
 skipsdist = True
 
 [pytest]
@@ -10,16 +10,20 @@ python_paths = cnc
 
 [testenv]
 deps =
+    -Urrequirements.txt
     pytest
-    urllib3
     pytest-django
     pytest-pythonpath
-    django
 commands = pytest
 
-[testenv:flake8]
+[testenv:flake8-ph]
 deps = flake8
 commands = flake8 src/panhandler
+
+[testenv:flake8-cnc]
+deps = flake8
+commands = flake8 cnc
+
 
 [flake8]
 max-line-length = 160
