--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,36 @@ cache:
         - .cache/pip
         - venv/
 
+# This file is a template, and might need editing before it works on your project.
+docker-build-master:
+    # Official docker image.
+    image: docker:latest
+    stage: build
+    # services:
+    #   - docker:dind
+    before_script:
+      - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+    script:
+      - docker build --pull -t "$CI_REGISTRY_IMAGE" .
+      - docker push "$CI_REGISTRY_IMAGE"
+    only:
+      - master
+  
+  docker-build:
+    # Official docker image.
+    image: docker:latest
+    stage: build
+    # services:
+    #   - docker:dind
+    before_script:
+      - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+    script:
+      - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG" .
+      - docker push "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG"
+    except:
+      - master
+  
+
 before_script:
     - python -V  # Print out python version for debugging
     - python3 -m venv env
