--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,14 +39,20 @@ docker-build:
   
 
 before_script:
-    - python -V  # Print out python version for debugging
+    # Print out python version for debugging
+    - python -V
+    
+    # Build and activate virtual environment
     - python3 -m venv env
     - source env/bin/activate
+
     - apt-get update
     - apt-get install -y git
 
+    #Updating git submodule (cnc)
     - git submodule init
     - git submodule update
+
     - pip install --upgrade pip
     - pip install -r requirements.txt
     - pip install tox flake8
