--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,8 +13,8 @@ docker-build-master:
     # Official docker image.
     image: docker:latest
     stage: build
-    # services:
-    #   - docker:dind
+    services:
+      - docker:dind
     before_script:
       - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
     script:
@@ -27,8 +27,8 @@ docker-build:
     # Official docker image.
     image: docker:latest
     stage: build
-    # services:
-    #   - docker:dind
+    services:
+        - docker:dind
     before_script:
         - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
     script:
