--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-GitPython==3.1.2
+GitPython==3.1.3
 PyYAML==5.3.1
-celery==4.4.2
-django==3.0.6
+azure-cli==2.7.0
+celery==4.4.5
+django==3.0.7
 django-widget-tweaks==1.4.8
-docker==4.2.0
+docker==4.2.1
 cryptography==2.9.2
 jinja2==3.0.0a1
 jsonpath-ng==1.5.1
