--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,10 +5,12 @@ services:
 stages:
   - build
   - test
+  - docker_test
   - push
 
 variables:
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
+  TEST_IMAGE: "$CI_REGISTRY_IMAGE:$CI_COMMIT_BRANCH-test"
 
 cache:
   paths:
@@ -18,22 +20,11 @@ cache:
 before_script:
   - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
 
-docker-build-master:
-  # Official docker image.
+docker-build:
   stage: build
   script:
-    - docker build --pull -t "$CI_REGISTRY_IMAGE" .
-  only:
-    - master
-
-docker-build-dev:
-  # Official docker image.
-  stage: build
-
-  script:
-    - docker build --pull -t "$CI_REGISTRY_IMAGE:dev" .
-  only:
-    - develop
+    - docker build --pull -t "$TEST_IMAGE" .
+    - docker push $TEST_IMAGE
 
 test:
   image: python:3.8-slim
@@ -53,9 +44,18 @@ test:
   script:
     - tox -e py38, flake8-ph, flake8-cnc
 
+docker_test:
+  image: $TEST_IMAGE
+  stage: docker_test
+  script:
+    - pip install tox
+    - tox -e docker_env
+
 push_dev:
   stage: push
   script:
+    - docker pull $TEST_IMAGE
+    - docker tag $TEST_IMAGE "$CI_REGISTRY_IMAGE:dev"
     - docker push "$CI_REGISTRY_IMAGE:dev"
   only:
     - develop
@@ -63,7 +63,9 @@ push_dev:
 push_master:
   stage: push
   script:
-    - docker push "$CI_REGISTRY_IMAGE"
+    - docker pull $TEST_IMAGE
+    - docker tag $TEST_IMAGE "$CI_REGISTRY_IMAGE:latest"
+    - docker push "$CI_REGISTRY_IMAGE:latest"
   only:
     - master
 
