--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py38,flake8-ph,flake8-cnc
+envlist = py37,py38,flake8-ph,flake8-cnc,docker_env
 skipsdist = True
 
 [pytest]
@@ -7,6 +7,9 @@ norecursedirs=.tox build venv* .eggs
 DJANGO_SETTINGS_MODULE = pan_cnc.settings
 python_files = test_*.py
 python_paths = cnc
+markers =
+    scm: test to run after clone, basic source control tests
+    docker_env: tests to run inside the docker image to test the docker environment
 
 [testenv]
 deps =
@@ -14,7 +17,7 @@ deps =
     pytest
     pytest-django
     pytest-pythonpath
-commands = pytest
+commands = pytest -m scm
 
 [testenv:flake8-ph]
 deps = flake8
@@ -24,6 +27,8 @@ commands = flake8 src/panhandler
 deps = flake8
 commands = flake8 cnc
 
+[testenv:docker_env]
+commands = pytest -m docker_env
 
 [flake8]
 max-line-length = 160
