Pulled docker image for tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,7 @@ docker-build-dev:
 test:
   stage: test
   script:
+    - docker pull "$CI_REGISTRY_IMAGE:dev"
     - docker run "$CI_REGISTRY_IMAGE:dev"
 
 push_dev:
