--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,7 @@ docker-build-master:
   stage: build
   script:
     - docker build --pull -t "$CI_REGISTRY_IMAGE" .
+    - docker push "$CI_REGISTRY_IMAGE:test"
   only:
     - master
 
@@ -32,6 +33,7 @@ docker-build-dev:
 
   script:
     - docker build --pull -t "$CI_REGISTRY_IMAGE:dev" .
+    - docker push "$CI_REGISTRY_IMAGE:test"
   only:
     - develop
 
@@ -44,6 +46,8 @@ test:
 push_dev:
   stage: push
   script:
+    - docker pull "$CI_REGISTRY_IMAGE:test"
+    - docker tag "$CI_REGISTRY_IMAGE:test" "$CI_REGISTRY_IMAGE:dev"
     - docker push "$CI_REGISTRY_IMAGE:dev"
   only:
     - develop
@@ -51,6 +55,8 @@ push_dev:
 push_master:
   stage: push
   script:
+    - docker pull "$CI_REGISTRY_IMAGE:test"
+    - docker tag "$CI_REGISTRY_IMAGE:test" "$CI_REGISTRY_IMAGE"
     - docker push "$CI_REGISTRY_IMAGE"
   only:
     - master
