--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ docker-build-master:
   # Official docker image.
   stage: build
   script:
-    - docker build --pull -t "$CI_REGISTRY_IMAGE" .
+    - docker build --pull -t "$CI_REGISTRY_IMAGE:test" .
     - docker push "$CI_REGISTRY_IMAGE:test"
   only:
     - master
@@ -32,7 +32,7 @@ docker-build-dev:
   stage: build
 
   script:
-    - docker build --pull -t "$CI_REGISTRY_IMAGE:dev" .
+    - docker build --pull -t "$CI_REGISTRY_IMAGE:test" .
     - docker push "$CI_REGISTRY_IMAGE:test"
   only:
     - develop
@@ -40,8 +40,8 @@ docker-build-dev:
 test:
   stage: test
   script:
-    - docker pull "$CI_REGISTRY_IMAGE:dev"
-    - docker run "$CI_REGISTRY_IMAGE:dev"
+    - docker pull "$CI_REGISTRY_IMAGE:test"
+    - docker run "$CI_REGISTRY_IMAGE:test"
 
 push_dev:
   stage: push
