Initialized git submodule inside docker_test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,8 @@ docker_test:
   image: $TEST_IMAGE
   stage: docker_test
   script:
+    - git submodule init
+    - git submodule update
     - pip install tox
     - tox -e docker_env
 
