--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,15 +27,27 @@ docker-build:
     - docker push $TEST_IMAGE
 
 test:
+  image: python:3.8-slim
   stage: test
+  before_script:
+    - python -V
+    - python3 -m venv env
+    - source env/bin/activate
+    - apt-get update
+    - apt-get install -y git
+    - git submodule init
+    - git submodule update
+    - pip install --upgrade pip
+    - pip install -r requirements.txt
+    - pip install tox flake8
+
   script:
-    - docker pull "$CI_REGISTRY_IMAGE:test"
-    - docker run "$CI_REGISTRY_IMAGE:test"
+    - tox -e py38, flake8-ph, flake8-cnc
+    
 
 docker_test:
   before_script:
-    - git submodule init
-    - git submodule update
+    - ''
   image: $TEST_IMAGE
   stage: docker_test
   script:
