--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,8 @@ test:
 
 docker_test:
   before_script:
-    - ''
+    - git submodule init
+    - git submodule update
   image: $TEST_IMAGE
   stage: docker_test
   script:
