add tests for GL #15

--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,7 @@ deps =
     pytest
     pytest-django
     pytest-pythonpath
+setenv = CNC_TEST = True
 commands = pytest -m scm
 
 [testenv:flake8-ph]
