--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ deps =
     pytest
     pytest-django
     pytest-pythonpath
-setenv = CNC_TEST = True
+setenv = CNC_TEST = TRUE
 commands = pytest -m scm
 
 [testenv:flake8-ph]
