fixes for #47 #43 and #37

--- a/src/panhandler/.pan-cnc.yaml
+++ b/src/panhandler/.pan-cnc.yaml
@@ -134,3 +134,14 @@ views:
   - name: push
     class: PushGitRepositoryView
 
+  - name: copy_skillet
+    class: CopySkilletView
+    parameters:
+      - repo_name
+      - skillet_name
+
+  - name: delete_skillet
+    class: DeleteSkilletView
+    parameters:
+      - repo_name
+      - skillet_name
